infrastructure/observability/logs/collector/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vector-ingress
  namespace: infra-observability
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: vector
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        k8s:app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: '8088'
        protocol: TCP
      rules:
        http: [{}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-geoip-update
  namespace: infra-observability
spec:
  endpointSelector:
    matchLabels:
      k8s.mcathome.ch/geoip: 'true'
  egress:
  - toFQDNs:
    # https://dev.maxmind.com/geoip/updating-databases/
    - matchName: updates.maxmind.com
    - matchName: mm-prod-geoip-databases.a2649acb697e2c09b632799562c076f2.r2.cloudflarestorage.com
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      terminatingTLS:
        secret:
          name: cilium-mitm-cert
          namespace: cert-manager
      originatingTLS:
        secret:
          name: ca-certificates
          namespace: cert-manager
      rules:
        http: [{}]
